--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "openreview",
-  "version": "0.0.1",
+  "name": "@openreview/client",
+  "version": "0.0.2",
   "description": "Node.js client library for OpenReview's academic publishing API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -14,13 +14,19 @@
     "openreview",
     "research"
   ],
-  "author": "Zach Bialecki <zach@openreview.net>",
+  "author": "Zach Bialecki <zach@openreview.net>, Carlos Mondragon <carlos@openreview.net>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/openreview/openreview-js/issues"
   },
   "homepage": "https://github.com/openreview/openreview-js#readme",
-  "engines" : {
-    "node" : ">=6.5.0"
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.9"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
   }
 }
