--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "form-data-encoder": "^1.7.2",
+    "formdata-node": "^4.4.1",
     "node-fetch": "^2.6.9"
   },
   "devDependencies": {
