--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: openreview/openreview-api
-          token: ${{ secrets.OPENREVIEW_ACCESS_TOKEN }}
+          token: ${{ secrets.PAT_OPENREVIEW_IESL }}
           path: openreview-api
       - name: Checkout openreview-js
         uses: actions/checkout@v3
