Chore: Install dependencies before running the tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js client library for OpenReview's academic publishing API",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "npm install && mocha"
   },
   "repository": {
     "type": "git",
