--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint && npm install && mocha"
+    "test": "npm install && npm run lint && mocha"
   },
   "repository": {
     "type": "git",
