Feat: Check TLD before validating a domain

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "form-data-encoder": "^1.7.2",
     "formdata-node": "^4.4.1",
-    "node-fetch": "^2.6.9"
+    "node-fetch": "^2.6.9",
+    "tldjs": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^8.37.0",
