--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "fast-xml-parser": "^4.3.2",
     "form-data-encoder": "^1.9.0",
     "formdata-node": "^4.4.1",
     "node-fetch": "^2.7.0",
