--- a/package.json
+++ b/package.json
@@ -28,8 +28,15 @@
     "fast-xml-parser": "^4.3.2",
     "form-data-encoder": "^1.9.0",
     "formdata-node": "^4.4.1",
+    "htmltidy2": "^1.1.1",
+    "lodash": "^4.17.21",
     "node-fetch": "^2.7.0",
-    "tldjs": "^2.3.1"
+    "puppeteer": "^21.7.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "tldjs": "^2.3.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
