--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "mocha": "^10.2.0"
   }
 }
