--- a/packages/meta-extraction/package.json
+++ b/packages/meta-extraction/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "@openreview/abstract-extractor",
+  "name": "@openreview/meta-extraction",
   "version": "0.0.0",
   "description": "Extract abstracts for DBLP papers",
   "main": "src/index.js",
   "type": "module",
   "directories": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "eslint": "^8.50.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "npm install && npm run lint",
     "lint": "eslint ."
