--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -41,5 +41,6 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "mocha": "^10.2.0"
-  }
+  },
+  "gitHead": "e83fe20886ca81f61c67c1884941b8df937c24c3"
 }
