--- a/packages/meta-extraction/package.json
+++ b/packages/meta-extraction/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "directories": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test"
   },
   "dependencies": {
     "htmltidy2": "^1.1.1",
@@ -23,7 +23,7 @@
     "mocha": "^10.2.0"
   },
   "scripts": {
-    "test": "npm install && npm run lint && mocha",
+    "test": "npm run lint && mocha",
     "lint": "eslint ."
   },
   "repository": {
