--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Node.js packages to interact with the OpenReview API and data",
   "main": "index.js",
   "scripts": {
-    "test": "npm install && lerna run test",
+    "test": "npm ci && lerna run test",
     "version": "lerna version --no-private",
     "npm-publish": "lerna publish from-package"
   },
