--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Node.js packages to interact with the OpenReview API and data",
   "main": "index.js",
   "scripts": {
-    "test": "npx lerna run test",
+    "test": "npm install && npx lerna run test",
     "version": "npx lerna version --no-private",
     "npm-publish": "npx lerna publish from-package"
   },
