Update dependencies and configure Puppeteer skip download

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,6 +75,7 @@ jobs:
         run: |
           cd openreview-api
           mkdir -p logs files/attachments files/pdfs files/temp
+          export PUPPETEER_SKIP_DOWNLOAD='true'
           npm ci
       - name: Run openreview-api
         run: |
