--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "packages/client",
     "packages/meta-extraction"
   ],
-  "dependencies": {},
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.14.0",
+    "globals": "^15.12.0",
     "lerna": "^8.1.9"
   },
   "optionalDependencies": {
