--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "description": "Node.js packages to interact with the OpenReview API and data",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "npm install && lerna run test",
     "coverage": "npm install --include=optional && lerna run coverage",
@@ -30,8 +31,6 @@
     "packages/meta-extraction"
   ],
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.14.0",
     "globals": "^15.12.0",
     "lerna": "^8.1.9"
   },
