--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -32,8 +32,7 @@
   "dependencies": {
     "fast-xml-parser": "^4.5.0",
     "form-data-encoder": "^4.0.2",
-    "formdata-node": "^6.0.3",
-    "tldjs": "^2.3.1"
+    "formdata-node": "^6.0.3"
   },
   "devDependencies": {
     "eslint": "^9.14.0",
