use mailjet instead of postfix

--- a/services/smtp-relay/Dockerfile
+++ b/services/smtp-relay/Dockerfile
@@ -6,25 +6,6 @@ ENV HOME=/home/$USER
 
 RUN mkdir -p $HOME/app
 
-# Install curl and gnupg for downloading and installing Node.js
-RUN apt-get update && \
-    apt-get install -y \
-    curl \
-    gnupg \
-    postfix \
-    iputils-ping \
-    vim \
-    iproute2 \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN postconf -e 'inet_protocols = ipv4'
-RUN postconf -e 'myhostname = celestecongrats.fun'
-RUN postconf -e 'mydomain = celestecongrats.fun'
-RUN postconf -e 'maillog_file = /var/log/postfix.log'
-RUN postconf -e 'smtp_host_lookup = dns'
-RUN touch /etc/mailname
-
-
 # Install Node.js v20
 RUN curl -L https://raw.githubusercontent.com/tj/n/master/bin/n -o n && \
     bash n 20.11.0 && \
@@ -41,23 +22,9 @@ COPY . .
 # Install dependencies
 RUN npm install
 
-# Expose port 8080 and 25
+# Expose port 8080 and 2525
 EXPOSE 8080
-EXPOSE 25
-
-RUN npm install -g pm2
-RUN echo '{\
-  "apps": [\
-    {\
-      "name": "node-app",\
-      "script": "src/index.js"\
-    },\
-    {\
-      "name": "postfix",\
-      "script": "postfix start && chmod 1777 /etc/resolv.conf && chmod 777 -R /var/spool/postfix &&  service postfix restart && tail -f /var/log/postfix.log"\
-    }\
-  ]\
-}' > pm2.json
+EXPOSE 2525
 
 # Command to run the service
-CMD ["pm2-runtime", "start", "pm2.json"]
+CMD ["node", "src/index.js"]
