Chore: Try to manually install chrome

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,7 @@ jobs:
           cd openreview-api
           mkdir -p logs files/attachments files/pdfs files/temp
           export PUPPETEER_SKIP_DOWNLOAD='true'
+          npx puppeteer browsers install chrome
           npm ci
       - name: Run openreview-api
         run: |
