--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ concurrency:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     services:
       redis:
@@ -75,8 +75,6 @@ jobs:
         run: |
           cd openreview-api
           mkdir -p logs files/attachments files/pdfs files/temp
-          sudo apt-get install -y chromium-suid-sandbox
-          sudo chmod 4755 /usr/lib/chromium/chrome-sandbox
           export PUPPETEER_SKIP_DOWNLOAD='true'
           npm ci
       - name: Run openreview-api
