Chore: Fix deployment with Lerna

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,3 +22,5 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm run npm-publish
+        env:
+          NPM_CONFIG_PROVENANCE: true
